--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,3 @@
-<!--
-  ~ MIT License
-  ~
-  ~ Copyright (c) 2018 Soojeong Shin
-  ~
-  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
-  ~ of this software and associated documentation files (the "Software"), to deal
-  ~ in the Software without restriction, including without limitation the rights
-  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-  ~ copies of the Software, and to permit persons to whom the Software is
-  ~ furnished to do so, subject to the following conditions:
-  ~
-  ~ The above copyright notice and this permission notice shall be included in all
-  ~ copies or substantial portions of the Software.
-  ~
-  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-  ~ SOFTWARE.
-  -->
-
 <resources>
     <string name="app_name">NewsFeed</string>
 
@@ -29,6 +5,13 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+
+    <!--  Activities' title  -->
+    <string name="title_login">Đăng nhập</string>
+
+    <!--  Button Label  -->
+    <string name="label_login">Đăng nhập bằng Facebook</string>
+    <string name="label_logout">Đăng xuất</string>
 
     <!-- Strings for items in activity_main_drawer.xml -->
     <string name="ic_title_home">Home</string>
@@ -158,5 +141,8 @@
     <!-- Label for text size large preference [CHAR LIMIT=20] -->
     <string name="settings_text_size_large_label">Large</string>
     <string name="settings_text_size_large_value" translatable="false">large</string>
+
+    <!--  Facebook  -->
+    <string name="facebook_app_id">481137056446828</string> <string name="fb_login_protocol_scheme">fb481137056446828</string>
 
 </resources>
