--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NewsFeed</string>
+    <string name="app_name">Đọc báo</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -14,15 +14,12 @@
     <string name="label_logout">Đăng xuất</string>
 
     <!-- Strings for items in activity_main_drawer.xml -->
-    <string name="ic_title_home">Home</string>
-    <string name="ic_title_world">World</string>
-    <string name="ic_title_science">Science</string>
-    <string name="ic_title_sport">Sport</string>
-    <string name="ic_title_environment">Environment</string>
-    <string name="ic_title_society">Society</string>
-    <string name="ic_title_fashion">Fashion</string>
-    <string name="ic_title_business">Business</string>
-    <string name="ic_title_culture">Culture</string>
+    <string name="ic_title_home">Trang chủ</string>
+    <string name="ic_title_category">Danh mục</string>
+
+    <!--  Strings for top navigation bar  -->
+    <string name="nav_title_new">Mới nhất</string>
+    <string name="nav_title_highlight">Nổi bật</string>
 
     <!-- Text to display in the list when there are no news [CHAR LIMIT=NONE] -->
     <string name="no_news">No news found.</string>
@@ -35,7 +32,7 @@
     <string name="image_des">Image</string>
     <string name="image_des_ic_share">Share</string>
 
-    <string name="updated_just_now">Updated just now</string>
+    <string name="updated_just_now">Cập nhật thành công</string>
     <string name="share_article">Share Article</string>
 
     <string name="the_guardian">theguardian</string>
@@ -143,6 +140,10 @@
     <string name="settings_text_size_large_value" translatable="false">large</string>
 
     <!--  Facebook  -->
-    <string name="facebook_app_id">481137056446828</string> <string name="fb_login_protocol_scheme">fb481137056446828</string>
+    <string name="facebook_app_id">481137056446828</string>
+    <string name="fb_login_protocol_scheme">fb481137056446828</string>
+
+    <!--  Share preferences  -->
+    <string name="share_preference_file_key">com.example.android.newsfeed.prefs</string>
 
 </resources>
